<resources>
    <string name="app_name">DigiCard</string>

    <string name="imageButton_plus_description">Add New card</string>
    <string name="imageButton_menu_description">menu</string>
    
    <string name="account">Account</string>
    <string name="settings">Settings</string>

    <string name="card_text">Card</string>
    <string name="promo_text">Promo</string>
    <string name="add_new_card_text">Add New Card</string>
    <string name="back_text">Back</string>
    <string name="hint_search">Search here…</string>
    <string name="hint_scan_activity">Card doesn\'t have a barcode?</string>
    <string name="input_manually">Input Manually</string>
    <string name="all_card">All Cards</string>

    <string name="done_text">Done</string>
    <string name="cancel_text">Cancel</string>

    <string name="settings_security_code">Security Code</string>
    <string name="settings_security_code_subtitle">Add or change security code to secure Digicard</string>
    <string name="remove_security_code">Remove Security Code</string>
    <string name="remove_security_code_subtitle">Remove existing security code</string>
    <string name="about">About</string>
    <string name="about_message">Digicard is an application that helps you store your loyalty cards by creating and storing digital copies, so you can free your wallet from plastic cards and enjoy hassle-free experiences unlike physical ones from using DigiCard. </string>

    <string name="settings_password">Security Code</string>
    <string name="settings_password_subtitle">Add or change security code to secure DigiCard</string>
    <string name="or_use">Or Use</string>
    <string name="okay">Okay</string>
    <string name="no_connected_account">No connected account</string>
    <string name="dob">DOB not set yet</string>
    <string name="identity">Identity number not set yet</string>
    <string name="address">Address not set yet</string>
    <string name="phone">Phone number not set yet</string>
    <string name="backup">Back up data</string>
    <string name="sign_out">Sign Out</string>
    <string name="card_alias">Card Alias</string>
    <string name="card_alias_hint">Add alias for this card here</string>
    <string name="barcode">Barcode</string>
    <string name="barcode_hint">Input your card\'s barcode number here</string>
    <string name="or">Or</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="show_barcode">Show Barcode</string>
    <string name="notes">Notes</string>
    <string name="notes_hint">Add note…</string>
    <string name="card_preview">Card Preview</string>
    <string name="front_view">Front view</string>
    <string name="back_view">Back view</string>
    <string name="card_name">Card Name : </string>
    <string name="no_merchant">No Merchant around here</string>
    <string name="name">Name</string>
    <string name="name_hint">Input your full name</string>
    <string name="identity_number">Identity Number</string>
    <string name="identity_number_hint">KTP (16 digits)</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="addressess">Address</string>
    <string name="addressess_hint">Input your address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_of_birth_hint">dd/mm/yyyy</string>
    <string name="captcha_hint">Input captcha</string>
    <string name="no_card">You don\'t have any card</string>
    <string name="no_promo">No promo available</string>
    <string name="have_member_card">Do you have this member card</string>
    <string name="have_member_card_yes">Yes, add existing member card</string>
    <string name="have_member_card_no">No, register now</string>
    <string name="input_new_alias">Input new card alias</string>
    <string name="input_notes">Input notes here</string>

    <!--dialog-->
    <string name="warning">warning</string>
    <string name="title_location_permission">Permisssion Needed</string>
    <string name="text_location_permission">This app would like to use your current location to customize your experience.</string>
    <string name="cancel_permission">CANCEL</string>
    <string name="dialog_header_location_null">Location not Found</string>
    <string name="dialog_content_location_null">Please check if internet connection or GPS services is active.</string>
    <string name="enter_security_code">Enter Your Security Code</string>
    <string name="wrong_security_code">Wrong Security Code</string>
    <string name="ok_permission">OKAY</string>
    <string name="hello">Hello,</string>

</resources>
